--- a/style.css
+++ b/style.css
@@ -4,30 +4,15 @@ body {
 
 /* RESPONSIVENESS */
 
-@media screen and (max-width: 800px) {
 
-  .container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 50px;
-  }
-
-  .price{
-    flex-basis: 250px;
-    height: 120%;
-    text-align: center;
-  }
-}
 
 
 
   .container{
     display: flex;
     flex-direction: row;
-    gap: 50px;
+    gap: 2rem;
     justify-content: center;
-    flex-wrap: wrap;
   }
 
 
@@ -158,4 +143,18 @@ body {
     text-transform: uppercase;
     color: white;
     border: none;
+  }
+
+
+  @media (max-width: 980px) {
+
+    .container{
+      flex-direction: column;
+      align-items: center;
+    }
+    
+    .buy_button {
+      margin: 50px 0 30px 0;
+    }
+
   }
