--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@ body {
 
 
 
-
-
+@media (min-width: 980px) {
   .container{
     display: flex;
     flex-direction: row;
@@ -23,6 +22,9 @@ body {
     border-radius: 20px;
     background-color: white;
   }
+}
+
+
 
   .head{
     height: 120px;
@@ -145,16 +147,17 @@ body {
     border: none;
   }
 
-
-  @media (max-width: 980px) {
+  @media (min-width: 480px ) and (max-width: 980px) {
 
     .container{
       flex-direction: column;
       align-items: center;
     }
-    
+
     .buy_button {
       margin: 50px 0 30px 0;
     }
+
+    
 
   }
